# python-project-50

./: .coverage  Makefile  README.md  coverage.json  coverage.lcov  coverage.xml  coverage_report.py  diff.json  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  gendiff_func.py  parsing.py
gendiff/formaters/: __init__.py  jsonutils.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
hexlet_code/scripts/: gendiff.py
tests/: test.json  test_genddiff.py
